Update Accelerating Dual Momentum.ipynb

--- a/Accelerating Dual Momentum.ipynb
+++ b/Accelerating Dual Momentum.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VFINX\n",
+      "PRIDX\n",
+      "VUSTX\n"
+     ]
+    }
+   ],
    "source": [
     "import yfinance as yf\n",
     "\n",
@@ -30,17 +40,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select only month-end prices\n",
+    "monthend = {}\n",
+    "for symbol, df in data.items():\n",
+    "    day1 = list(df.index.month)\n",
+    "    day2 = list(df.index.month)\n",
+    "    day2.pop(0)\n",
+    "    day2.append(-1)\n",
+    "    days = zip(day1, day2)\n",
+    "    truth_vals = [False if x[0] == x[1] else True for x in days]\n",
+    "    df_month_end = df[truth_vals]\n",
+    "    monthend[symbol] = df_month_end"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas\n",
-    "import datetime\n",
-    "from dateutil.relativedelta import relativedelta\n",
-    "\n",
-    "def lastyear_period_start(current_date):\n",
-    "    last_year = current_date - relativedelta(months=11)\n",
-    "    return datetime.date(last_year.year, last_year.month, 1)"
+    "# Calculate momentum signals"
    ]
   }
  ],
