Switch visualization from pyfolio to quantstats

--- a/Accelerating Dual Momentum.ipynb
+++ b/Accelerating Dual Momentum.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -169,8 +169,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-09</th>\n",
-       "      <td>10.645134</td>\n",
-       "      <td>20.722695</td>\n",
+       "      <td>10.644717</td>\n",
+       "      <td>20.722278</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -184,10 +184,10 @@
        "2020-06         6.325886        13.070038\n",
        "2020-07         6.862086        13.719571\n",
        "2020-08        14.250359        17.870925\n",
-       "2020-09        10.645134        20.722695"
+       "2020-09        10.644717        20.722278"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -278,7 +278,7 @@
        "    <tr>\n",
        "      <th>2020-09</th>\n",
        "      <td>PRIDX</td>\n",
-       "      <td>20.722695</td>\n",
+       "      <td>20.722278</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -292,10 +292,10 @@
        "2020-06  PRIDX  13.070038\n",
        "2020-07  PRIDX  13.719571\n",
        "2020-08  PRIDX  17.870925\n",
-       "2020-09  PRIDX  20.722695"
+       "2020-09  PRIDX  20.722278"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -386,49 +386,56 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Returns</th>\n",
+       "      <th>Return</th>\n",
+       "      <th>Value</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2020-09-23</th>\n",
-       "      <td>-0.008414</td>\n",
+       "      <th>1989-01-04</th>\n",
+       "      <td>0.017241</td>\n",
+       "      <td>101.724138</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-09-24</th>\n",
-       "      <td>-0.003040</td>\n",
+       "      <th>1989-01-05</th>\n",
+       "      <td>0.002211</td>\n",
+       "      <td>101.949025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-09-25</th>\n",
-       "      <td>0.009909</td>\n",
+       "      <th>1989-01-06</th>\n",
+       "      <td>0.002206</td>\n",
+       "      <td>102.173913</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-09-28</th>\n",
-       "      <td>0.012579</td>\n",
+       "      <th>1989-01-09</th>\n",
+       "      <td>0.001467</td>\n",
+       "      <td>102.323838</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-09-29</th>\n",
-       "      <td>0.002236</td>\n",
+       "      <th>1989-01-10</th>\n",
+       "      <td>-0.002198</td>\n",
+       "      <td>102.098951</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Returns\n",
-       "Date                \n",
-       "2020-09-23 -0.008414\n",
-       "2020-09-24 -0.003040\n",
-       "2020-09-25  0.009909\n",
-       "2020-09-28  0.012579\n",
-       "2020-09-29  0.002236"
+       "              Return       Value\n",
+       "Date                            \n",
+       "1989-01-04  0.017241  101.724138\n",
+       "1989-01-05  0.002211  101.949025\n",
+       "1989-01-06  0.002206  102.173913\n",
+       "1989-01-09  0.001467  102.323838\n",
+       "1989-01-10 -0.002198  102.098951"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,13 +461,15 @@
     "        break\n",
     "        \n",
     "# Step 2 for each trading day compute portfolio return\n",
+    "growth = 100\n",
     "last = trading_days[0]\n",
     "asset = portfolio.loc[(last.year, last.month)]['Symbol']\n",
     "for day in trading_days[1:]:\n",
     "    current_close = data[asset].loc[day]['Close']\n",
     "    previous_close = data[asset].loc[last]['Close']\n",
     "    ret = current_close / previous_close - 1\n",
-    "    returns.append({'Date': day, 'Return': ret})\n",
+    "    growth = growth * (1.0 + ret)\n",
+    "    returns.append({'Date': day, 'Return': ret, 'Value': growth})\n",
     "\n",
     "    # check if asset was sold\n",
     "    month = (day.year, day.month)\n",
@@ -470,13 +479,13 @@
     "    # update the last trading day\n",
     "    last = day\n",
     "\n",
-    "returns_df = pandas.DataFrame([x['Return'] for x in returns], index=pandas.DatetimeIndex([x['Date'] for x in returns], name='Date'), columns=['Returns'])\n",
-    "returns_df.tail()"
+    "returns_df = pandas.DataFrame(returns, index=pandas.DatetimeIndex([x['Date'] for x in returns], name='Date'), columns=['Return', 'Value'])\n",
+    "returns_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +742,7 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>PRIDX</td>\n",
-       "      <td>20.722695</td>\n",
+       "      <td>20.722278</td>\n",
        "      <td>-0.008845</td>\n",
        "      <td>3.287463e+06</td>\n",
        "      <td>40746.933286</td>\n",
@@ -769,7 +778,7 @@
        "     7      PRIDX  13.070038       0.042303  2.891402e+06   40746.933286   \n",
        "     8      PRIDX  13.719571       0.063839  3.075986e+06   40746.933286   \n",
        "     9      PRIDX  17.870925       0.078289  3.316800e+06   40746.933286   \n",
-       "     10     PRIDX  20.722695      -0.008845  3.287463e+06   40746.933286   \n",
+       "     10     PRIDX  20.722278      -0.008845  3.287463e+06   40746.933286   \n",
        "\n",
        "             Price  \n",
        "Year Month          \n",
@@ -799,7 +808,7 @@
        "     10      80.68  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,113 +834,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import quantstats as qs\n",
+    "qs.reports.html(returns_df['Value'], benchmark, output='report.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\"><th>Start date</th><td colspan=2>1989-01-04</td></tr>\n",
-       "    <tr style=\"text-align: right;\"><th>End date</th><td colspan=2>2020-09-29</td></tr>\n",
-       "    <tr style=\"text-align: right;\"><th>Total months</th><td colspan=2>380</td></tr>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Backtest</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Annual return</th>\n",
-       "      <td>19.8%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Cumulative returns</th>\n",
-       "      <td>30782.7%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Annual volatility</th>\n",
-       "      <td>13.7%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sharpe ratio</th>\n",
-       "      <td>1.39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Calmar ratio</th>\n",
-       "      <td>0.64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Stability</th>\n",
-       "      <td>0.98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Max drawdown</th>\n",
-       "      <td>-31.0%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Omega ratio</th>\n",
-       "      <td>1.28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sortino ratio</th>\n",
-       "      <td>2.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Skew</th>\n",
-       "      <td>-0.49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Kurtosis</th>\n",
-       "      <td>5.86</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Tail ratio</th>\n",
-       "      <td>1.07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Daily value at risk</th>\n",
-       "      <td>-1.6%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Alpha</th>\n",
-       "      <td>0.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Beta</th>\n",
-       "      <td>0.25</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>"
+       "\n",
+       "        <iframe\n",
+       "            width=\"1024\"\n",
+       "            height=\"600\"\n",
+       "            src=\"./report.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
       ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "<IPython.lib.display.IFrame at 0x13dd0f470>"
       ]
      },
+     "execution_count": 13,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.int64' object has no attribute 'to_pydatetime'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-81-d5b8c16c11c8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpyfolio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpyfolio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_full_tear_sheet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreturns_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Returns'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbenchmark_rets\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbenchmark_aligned\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Returns'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Library/Python/3.7/site-packages/pyfolio/tears.py\u001b[0m in \u001b[0;36mcreate_full_tear_sheet\u001b[0;34m(returns, positions, transactions, market_data, benchmark_rets, slippage, live_start_date, sector_mappings, bayesian, round_trips, estimate_intraday, hide_positions, cone_std, bootstrap, unadjusted_returns, style_factor_panel, sectors, caps, shares_held, volumes, percentile, turnover_denom, set_context, factor_returns, factor_loadings, pos_in_dollars, header_rows, factor_partitions)\u001b[0m\n\u001b[1;32m    209\u001b[0m         \u001b[0mturnover_denom\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mturnover_denom\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    210\u001b[0m         \u001b[0mheader_rows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mheader_rows\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 211\u001b[0;31m         set_context=set_context)\n\u001b[0m\u001b[1;32m    212\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    213\u001b[0m     create_interesting_times_tear_sheet(returns,\n",
-      "\u001b[0;32m/Library/Python/3.7/site-packages/pyfolio/plotting.py\u001b[0m in \u001b[0;36mcall_w_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     50\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mset_context\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mplotting_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxes_style\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 52\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     53\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Python/3.7/site-packages/pyfolio/tears.py\u001b[0m in \u001b[0;36mcreate_returns_tear_sheet\u001b[0;34m(returns, positions, transactions, live_start_date, cone_std, benchmark_rets, bootstrap, turnover_denom, header_rows, return_fig)\u001b[0m\n\u001b[1;32m    502\u001b[0m                              header_rows=header_rows)\n\u001b[1;32m    503\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 504\u001b[0;31m     \u001b[0mplotting\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow_worst_drawdown_periods\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreturns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    505\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    506\u001b[0m     \u001b[0mvertical_sections\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m11\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Python/3.7/site-packages/pyfolio/plotting.py\u001b[0m in \u001b[0;36mshow_worst_drawdown_periods\u001b[0;34m(returns, top)\u001b[0m\n\u001b[1;32m   1662\u001b[0m     \"\"\"\n\u001b[1;32m   1663\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1664\u001b[0;31m     \u001b[0mdrawdown_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtimeseries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgen_drawdown_table\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreturns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtop\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtop\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1665\u001b[0m     utils.print_table(\n\u001b[1;32m   1666\u001b[0m         \u001b[0mdrawdown_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Net drawdown in %'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mascending\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Python/3.7/site-packages/pyfolio/timeseries.py\u001b[0m in \u001b[0;36mgen_drawdown_table\u001b[0;34m(returns, top)\u001b[0m\n\u001b[1;32m   1006\u001b[0m         df_drawdowns.loc[i, 'Peak date'] = (peak.to_pydatetime()\n\u001b[1;32m   1007\u001b[0m                                             .strftime('%Y-%m-%d'))\n\u001b[0;32m-> 1008\u001b[0;31m         df_drawdowns.loc[i, 'Valley date'] = (valley.to_pydatetime()\n\u001b[0m\u001b[1;32m   1009\u001b[0m                                               .strftime('%Y-%m-%d'))\n\u001b[1;32m   1010\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecovery\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.int64' object has no attribute 'to_pydatetime'"
-     ]
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pyfolio\n",
-    "pyfolio.create_full_tear_sheet(returns_df['Returns'], benchmark_rets=benchmark_aligned['Returns'])"
+    "from IPython.display import IFrame\n",
+    "\n",
+    "IFrame(src='./report.html', width=1024, height=600)"
    ]
   },
   {
