Include out-of-market fund in time-alignment

--- a/Accelerating Dual Momentum.ipynb
+++ b/Accelerating Dual Momentum.ipynb
@@ -140,7 +140,7 @@
     "import pandas\n",
     "merged = None\n",
     "for symbol, df in monthend.items():\n",
-    "    if not symbol in in_funds:\n",
+    "    if not symbol in (in_funds + [out_funds]):\n",
     "        continue\n",
     "    if merged is None:\n",
     "        merged = pandas.DataFrame(df['ADMSignal'])\n",
@@ -151,7 +151,8 @@
     "        df2[f'{symbol}-ADMSignal'] = df2['ADMSignal']\n",
     "        df2 = df2.drop(columns=['ADMSignal'])\n",
     "        merged = merged.merge(df2, how='inner', on='Date')\n",
-    "time_aligned = merged.dropna()"
+    "time_aligned = merged.dropna()\n",
+    "time_aligned = time_aligned.drop(f'{out_funds}-ADMSignal', axis=1)"
    ]
   },
   {
@@ -592,7 +593,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1375976a0>"
+       "<IPython.lib.display.IFrame at 0x1371d8b38>"
       ]
      },
      "execution_count": 13,
