Shift performance results so they show data for the right month

--- a/Accelerating Dual Momentum.ipynb
+++ b/Accelerating Dual Momentum.ipynb
@@ -355,88 +355,75 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2019</th>\n",
-       "      <th>12</th>\n",
-       "      <td>VFINX</td>\n",
-       "      <td>8.400887</td>\n",
-       "      <td>8.400887</td>\n",
-       "      <td>4.934418</td>\n",
-       "      <td>0.036224</td>\n",
-       "      <td>2.510483e+06</td>\n",
-       "      <td>8749.765529</td>\n",
-       "      <td>286.92</td>\n",
-       "      <td>286.92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"11\" valign=\"top\">2020</th>\n",
+       "      <th rowspan=\"12\" valign=\"top\">2020</th>\n",
        "      <th>1</th>\n",
        "      <td>PRIDX</td>\n",
        "      <td>7.468355</td>\n",
-       "      <td>7.180398</td>\n",
+       "      <td>7.178043</td>\n",
        "      <td>7.468355</td>\n",
-       "      <td>0.030078</td>\n",
-       "      <td>2.585993e+06</td>\n",
-       "      <td>37845.649085</td>\n",
+       "      <td>-0.017123</td>\n",
+       "      <td>2.553674e+06</td>\n",
+       "      <td>38023.741366</td>\n",
        "      <td>68.33</td>\n",
-       "      <td>295.55</td>\n",
+       "      <td>294.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>VFINX</td>\n",
-       "      <td>4.852397</td>\n",
-       "      <td>4.852397</td>\n",
+       "      <td>4.854145</td>\n",
+       "      <td>4.854145</td>\n",
        "      <td>2.928652</td>\n",
-       "      <td>-0.017123</td>\n",
-       "      <td>2.541714e+06</td>\n",
-       "      <td>8604.312094</td>\n",
-       "      <td>295.40</td>\n",
+       "      <td>-0.082424</td>\n",
+       "      <td>2.343190e+06</td>\n",
+       "      <td>8679.767751</td>\n",
+       "      <td>294.21</td>\n",
        "      <td>67.16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>VUSTX</td>\n",
        "      <td>-0.380001</td>\n",
-       "      <td>-4.375589</td>\n",
+       "      <td>-4.373422</td>\n",
        "      <td>-0.380001</td>\n",
-       "      <td>-0.082431</td>\n",
-       "      <td>2.332199e+06</td>\n",
-       "      <td>158760.979788</td>\n",
-       "      <td>14.69</td>\n",
-       "      <td>271.05</td>\n",
+       "      <td>0.056655</td>\n",
+       "      <td>2.475944e+06</td>\n",
+       "      <td>159944.716871</td>\n",
+       "      <td>14.65</td>\n",
+       "      <td>269.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>VUSTX</td>\n",
-       "      <td>-15.102111</td>\n",
-       "      <td>-15.102111</td>\n",
+       "      <td>-15.102925</td>\n",
+       "      <td>-15.102925</td>\n",
        "      <td>-16.785935</td>\n",
-       "      <td>0.056501</td>\n",
-       "      <td>2.463970e+06</td>\n",
-       "      <td>158760.979788</td>\n",
-       "      <td>15.52</td>\n",
-       "      <td>15.52</td>\n",
+       "      <td>0.018088</td>\n",
+       "      <td>2.520729e+06</td>\n",
+       "      <td>159944.716871</td>\n",
+       "      <td>15.48</td>\n",
+       "      <td>15.48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>PRIDX</td>\n",
        "      <td>0.319519</td>\n",
-       "      <td>-0.128895</td>\n",
+       "      <td>-0.128160</td>\n",
        "      <td>0.319519</td>\n",
-       "      <td>0.018686</td>\n",
-       "      <td>2.510011e+06</td>\n",
-       "      <td>40746.933286</td>\n",
+       "      <td>0.105195</td>\n",
+       "      <td>2.785896e+06</td>\n",
+       "      <td>40920.921070</td>\n",
        "      <td>61.60</td>\n",
-       "      <td>15.81</td>\n",
+       "      <td>15.76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>PRIDX</td>\n",
        "      <td>6.678406</td>\n",
-       "      <td>1.890366</td>\n",
+       "      <td>1.890858</td>\n",
        "      <td>6.678406</td>\n",
-       "      <td>0.105195</td>\n",
-       "      <td>2.774051e+06</td>\n",
-       "      <td>40746.933286</td>\n",
+       "      <td>0.042303</td>\n",
+       "      <td>2.903749e+06</td>\n",
+       "      <td>40920.921070</td>\n",
        "      <td>68.08</td>\n",
        "      <td>68.08</td>\n",
        "    </tr>\n",
@@ -444,11 +431,11 @@
        "      <th>7</th>\n",
        "      <td>PRIDX</td>\n",
        "      <td>13.070038</td>\n",
-       "      <td>6.325886</td>\n",
+       "      <td>6.328439</td>\n",
        "      <td>13.070038</td>\n",
-       "      <td>0.042303</td>\n",
-       "      <td>2.891402e+06</td>\n",
-       "      <td>40746.933286</td>\n",
+       "      <td>0.063839</td>\n",
+       "      <td>3.089120e+06</td>\n",
+       "      <td>40920.921070</td>\n",
        "      <td>70.96</td>\n",
        "      <td>70.96</td>\n",
        "    </tr>\n",
@@ -456,11 +443,11 @@
        "      <th>8</th>\n",
        "      <td>PRIDX</td>\n",
        "      <td>13.719571</td>\n",
-       "      <td>6.862086</td>\n",
+       "      <td>6.860998</td>\n",
        "      <td>13.719571</td>\n",
-       "      <td>0.063839</td>\n",
-       "      <td>3.075986e+06</td>\n",
-       "      <td>40746.933286</td>\n",
+       "      <td>0.078289</td>\n",
+       "      <td>3.330963e+06</td>\n",
+       "      <td>40920.921070</td>\n",
        "      <td>75.49</td>\n",
        "      <td>75.49</td>\n",
        "    </tr>\n",
@@ -468,11 +455,11 @@
        "      <th>9</th>\n",
        "      <td>PRIDX</td>\n",
        "      <td>17.870925</td>\n",
-       "      <td>14.250359</td>\n",
+       "      <td>14.249473</td>\n",
        "      <td>17.870925</td>\n",
-       "      <td>0.078289</td>\n",
-       "      <td>3.316800e+06</td>\n",
-       "      <td>40746.933286</td>\n",
+       "      <td>-0.007494</td>\n",
+       "      <td>3.306001e+06</td>\n",
+       "      <td>40920.921070</td>\n",
        "      <td>81.40</td>\n",
        "      <td>81.4</td>\n",
        "    </tr>\n",
@@ -480,25 +467,37 @@
        "      <th>10</th>\n",
        "      <td>PRIDX</td>\n",
        "      <td>20.887326</td>\n",
-       "      <td>11.562066</td>\n",
+       "      <td>12.013963</td>\n",
        "      <td>20.887326</td>\n",
-       "      <td>-0.007494</td>\n",
-       "      <td>3.291945e+06</td>\n",
-       "      <td>40746.933286</td>\n",
+       "      <td>-0.014358</td>\n",
+       "      <td>3.258533e+06</td>\n",
+       "      <td>40920.921070</td>\n",
        "      <td>80.79</td>\n",
        "      <td>80.79</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>PRIDX</td>\n",
-       "      <td>13.004732</td>\n",
-       "      <td>5.704679</td>\n",
-       "      <td>13.004732</td>\n",
-       "      <td>0.002723</td>\n",
-       "      <td>3.300909e+06</td>\n",
-       "      <td>40746.933286</td>\n",
-       "      <td>81.01</td>\n",
-       "      <td>81.01</td>\n",
+       "      <td>11.079415</td>\n",
+       "      <td>3.603822</td>\n",
+       "      <td>11.079415</td>\n",
+       "      <td>0.114906</td>\n",
+       "      <td>3.632959e+06</td>\n",
+       "      <td>40920.921070</td>\n",
+       "      <td>79.63</td>\n",
+       "      <td>79.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>PRIDX</td>\n",
+       "      <td>16.963352</td>\n",
+       "      <td>11.687977</td>\n",
+       "      <td>16.963352</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>40920.921070</td>\n",
+       "      <td>88.78</td>\n",
+       "      <td>88.78</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -507,33 +506,33 @@
       "text/plain": [
        "           Symbol     Signal  VFINX-ADMSignal  PRIDX-ADMSignal  MonthlyReturn  \\\n",
        "Year Month                                                                      \n",
-       "2019 12     VFINX   8.400887         8.400887         4.934418       0.036224   \n",
-       "2020 1      PRIDX   7.468355         7.180398         7.468355       0.030078   \n",
-       "     2      VFINX   4.852397         4.852397         2.928652      -0.017123   \n",
-       "     3      VUSTX  -0.380001        -4.375589        -0.380001      -0.082431   \n",
-       "     4      VUSTX -15.102111       -15.102111       -16.785935       0.056501   \n",
-       "     5      PRIDX   0.319519        -0.128895         0.319519       0.018686   \n",
-       "     6      PRIDX   6.678406         1.890366         6.678406       0.105195   \n",
-       "     7      PRIDX  13.070038         6.325886        13.070038       0.042303   \n",
-       "     8      PRIDX  13.719571         6.862086        13.719571       0.063839   \n",
-       "     9      PRIDX  17.870925        14.250359        17.870925       0.078289   \n",
-       "     10     PRIDX  20.887326        11.562066        20.887326      -0.007494   \n",
-       "     11     PRIDX  13.004732         5.704679        13.004732       0.002723   \n",
+       "2020 1      PRIDX   7.468355         7.178043         7.468355      -0.017123   \n",
+       "     2      VFINX   4.854145         4.854145         2.928652      -0.082424   \n",
+       "     3      VUSTX  -0.380001        -4.373422        -0.380001       0.056655   \n",
+       "     4      VUSTX -15.102925       -15.102925       -16.785935       0.018088   \n",
+       "     5      PRIDX   0.319519        -0.128160         0.319519       0.105195   \n",
+       "     6      PRIDX   6.678406         1.890858         6.678406       0.042303   \n",
+       "     7      PRIDX  13.070038         6.328439        13.070038       0.063839   \n",
+       "     8      PRIDX  13.719571         6.860998        13.719571       0.078289   \n",
+       "     9      PRIDX  17.870925        14.249473        17.870925      -0.007494   \n",
+       "     10     PRIDX  20.887326        12.013963        20.887326      -0.014358   \n",
+       "     11     PRIDX  11.079415         3.603822        11.079415       0.114906   \n",
+       "     12     PRIDX  16.963352        11.687977        16.963352            NaN   \n",
        "\n",
        "                   Value      NumShares   Price SoldPrice  \n",
        "Year Month                                                 \n",
-       "2019 12     2.510483e+06    8749.765529  286.92    286.92  \n",
-       "2020 1      2.585993e+06   37845.649085   68.33    295.55  \n",
-       "     2      2.541714e+06    8604.312094  295.40     67.16  \n",
-       "     3      2.332199e+06  158760.979788   14.69    271.05  \n",
-       "     4      2.463970e+06  158760.979788   15.52     15.52  \n",
-       "     5      2.510011e+06   40746.933286   61.60     15.81  \n",
-       "     6      2.774051e+06   40746.933286   68.08     68.08  \n",
-       "     7      2.891402e+06   40746.933286   70.96     70.96  \n",
-       "     8      3.075986e+06   40746.933286   75.49     75.49  \n",
-       "     9      3.316800e+06   40746.933286   81.40      81.4  \n",
-       "     10     3.291945e+06   40746.933286   80.79     80.79  \n",
-       "     11     3.300909e+06   40746.933286   81.01     81.01  "
+       "2020 1      2.553674e+06   38023.741366   68.33    294.35  \n",
+       "     2      2.343190e+06    8679.767751  294.21     67.16  \n",
+       "     3      2.475944e+06  159944.716871   14.65    269.96  \n",
+       "     4      2.520729e+06  159944.716871   15.48     15.48  \n",
+       "     5      2.785896e+06   40920.921070   61.60     15.76  \n",
+       "     6      2.903749e+06   40920.921070   68.08     68.08  \n",
+       "     7      3.089120e+06   40920.921070   70.96     70.96  \n",
+       "     8      3.330963e+06   40920.921070   75.49     75.49  \n",
+       "     9      3.306001e+06   40920.921070   81.40      81.4  \n",
+       "     10     3.258533e+06   40920.921070   80.79     80.79  \n",
+       "     11     3.632959e+06   40920.921070   79.63     79.63  \n",
+       "     12              NaN   40920.921070   88.78     88.78  "
       ]
      },
      "execution_count": 10,
@@ -543,6 +542,8 @@
    ],
    "source": [
     "# Print out last few items, to show what should be purchased\n",
+    "portfolio['MonthlyReturn'] = portfolio['MonthlyReturn'].shift(-1)\n",
+    "portfolio['Value'] = portfolio['Value'].shift(-1)\n",
     "portfolio.tail(12)"
    ]
   },
@@ -593,7 +594,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1371d8b38>"
+       "<IPython.lib.display.IFrame at 0x131f52588>"
       ]
      },
      "execution_count": 13,
