Use ETF's meshach can purchase

--- a/Accelerating Dual Momentum.ipynb
+++ b/Accelerating Dual Momentum.ipynb
@@ -9,8 +9,8 @@
     "# Parameters for simulation\n",
     "\n",
     "# Funds to use\n",
-    "in_funds = ['VFINX', 'PRIDX']\n",
-    "out_funds = 'VUSTX'\n",
+    "in_funds = ['SWPPX', 'SCZ']\n",
+    "out_funds = 'TLT'\n",
     "benchmark = 'VFINX'\n",
     "risk_free_fund = '^IRX'\n",
     "\n",
