Change SWPPX mutual fund to SPLG

--- a/Accelerating Dual Momentum.ipynb
+++ b/Accelerating Dual Momentum.ipynb
@@ -9,7 +9,7 @@
     "# Parameters for simulation\n",
     "\n",
     "# Funds to use\n",
-    "in_funds = ['SWPPX', 'SCZ']\n",
+    "in_funds = ['SPLG', 'SCZ']\n",
     "out_funds = 'TLT'\n",
     "benchmark = 'VFINX'\n",
     "risk_free_fund = '^IRX'\n",
